# foc-fiar

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac
client/: Makefile.am  cert.c  cin.c  client.c  connect4.c  game.c  main.c  proto.c  x509.c
common/: Makefile.am  cout.c  dh.c  digest.c  error.c  file.c  gcm.c  list.c  mem.c  memdbg.c  net.c  pem.c  proto.c  protocol.c  random.c  sign.c  stringop.c
diagrams/: messages.drawio  modules.drawio  proto.drawio
doc/: .gitignore  Makefile.am  abstract.tex  report.tex  unipi.sty
doc/chapters/: design.tex  howto.tex  keyxchg.tex  msgs.tex  proto.tex  secure.tex  specs.tex
doc/chapters/design/: client.tex  common.tex  modules.tex  server.tex
doc/chapters/howto/: compile.tex  run.tex
doc/chapters/msgs/: format.tex  p2p.tex  server.tex
doc/chapters/proto/: keyxchng.tex  p2p.tex  security.tex  server.tex
doc/chapters/secure/: asserts.tex  memory.tex  msgs.tex  proto.tex  tests.tex  warnings.tex
doc/listings/: msgheader.c
include/: assertions.h  cout.h  dh.h  digest.h  error.h  file.h  gcm.h  list.h  mem.h  memdbg.h  messages.h  net.h  pem.h  proto.h  protocol.h  random.h  stringop.h
include/client/: cin.h  connect4.h  game.h  proto.h  x509.h
include/server/: clientlist.h  list.h  proto.h  x509.h
m4/: ac_prog_epstopdf.m4  attributes.m4
server/: Makefile.am  clientlist.c  list.c  proto.c  server.c  user_list.c  x509.c
